[package]
name = "manix"
description = "Nix documentation searcher"
version = "0.7.0"
authors = ["mlvzk <mlvzk@protonmail.com>", "n16hth4wk <lecoqjacob@gmail.com>"]
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rnix = "0.10"
crc32fast = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
roxmltree = "0.18.1"
bincode = "1.3"
walkdir = "2.0"
rayon = "1.3"
colored = "2.0"
xdg = "2.2"
lazy_static = "1.4"
anyhow = "1.0"
thiserror = "1.0"
structopt = "0.3"
