[package]
name = "manix"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
description = "Nix documentation searcher"
authors = ["mlvzk <mlvzk@protonmail.com>", "n16hth4wk <lecoqjacob@gmail.com>"]

[dependencies]
anyhow = "1"
bincode = "1"
colored = "2"
crc32fast = "1"
lazy_static = "1"
rayon = "1"
rnix = "0.11"
rowan = "0.15"
roxmltree = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
thiserror = "1"
walkdir = "2"
xdg = "2.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
debug = false
